// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button variants renders danger variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full px-4 py-3 text-sm font-medium transition-all duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-400 disabled:opacity-50 disabled:cursor-not-allowed bg-red-500/20 text-red-400 hover:bg-red-500/30 active:bg-red-500/40"
  type="button"
>
  danger
</button>
`;

exports[`Button variants renders external variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full px-4 py-3 text-sm font-medium transition-all duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-400 disabled:opacity-50 disabled:cursor-not-allowed bg-violet-500/20 text-violet-400 hover:bg-violet-500/30 active:bg-violet-500/40"
  type="button"
>
  external
</button>
`;

exports[`Button variants renders primary variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full px-4 py-3 text-sm font-medium transition-all duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-400 disabled:opacity-50 disabled:cursor-not-allowed bg-cyan-500/20 text-cyan-400 hover:bg-cyan-500/30 active:bg-cyan-500/40"
  type="button"
>
  primary
</button>
`;

exports[`Button variants renders secondary variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full px-4 py-3 text-sm font-medium transition-all duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-400 disabled:opacity-50 disabled:cursor-not-allowed border border-slate-600 text-slate-300 hover:bg-slate-800 active:bg-slate-700"
  type="button"
>
  secondary
</button>
`;

exports[`Button variants renders warning variant without visual regressions 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full px-4 py-3 text-sm font-medium transition-all duration-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-cyan-400 disabled:opacity-50 disabled:cursor-not-allowed bg-amber-500/20 text-amber-400 hover:bg-amber-500/30 active:bg-amber-500/40"
  type="button"
>
  warning
</button>
`;
